<resources>
    <string name="app_name">MyChatApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="log_out">Log Out</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_1">Login</string>
    <string name="log_in">Log In</string>
    <string name="message">Message</string>
    <string name="mail">Email</string>
    <string name="pass">Password</string>
    <string name="create_an_account">Create An Account</string>
    <string name="user_name">User Name</string>
    <string name="register_1">Register</string>
    <string name="name">User Name</string>
</resources>