<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".Register">

    <include layout="@layout/barlayout"
        android:id="@+id/toolbarregis"/>



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:elevation="10dp"
        android:layout_below="@id/toolbarregis">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/toolbarregis">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_an_account"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_margin="20dp"
            android:textStyle="bold"/>


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/reg_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:textColorHint="#757575"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/reg_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/mail"
            android:inputType="textEmailAddress"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/reg_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/pass"
            android:inputType="textPassword"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />


        <Button
            android:id="@+id/register_Account_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@android:color/holo_red_light"
            android:text="@string/register_1"
            android:clickable="true"
            android:textColor="#212121"
            android:focusable="true"
            tools:ignore="VisualLintButtonSize" />



    </LinearLayout>

    </androidx.cardview.widget.CardView>






</RelativeLayout>