<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".Login">

    <include layout="@layout/barlayout"
        android:id="@+id/toolbarlogin"/>



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:elevation="10dp"
        android:layout_below="@id/toolbarlogin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_below="@id/toolbarlogin">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:layout_margin="20dp"
                android:textStyle="bold"/>


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/log_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/log_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />


            <Button
                android:id="@+id/login_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:background="@android:color/holo_red_light"
                android:text="@string/login_1"
                android:clickable="true"
                android:textColor="#212121"
                android:focusable="true"
                tools:ignore="VisualLintButtonSize" />



        </LinearLayout>

    </androidx.cardview.widget.CardView>






</RelativeLayout>